<resources>
    <string name="app_name">GPS Alert</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search location</string>
    <string name="create_new_location">Create new location</string>
    <string name="create_new_location_question">Do you want to create a new location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_create_location">Edit Location</string>
    <string name="name">Name</string>
    <string name="radius">Radius: %1$d m</string>
    <string name="save_location">Save</string>
    <string name="title_activity_list_location">Favorites</string>
    <string name="action_remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

</resources>
