<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mateus.maps.EditLocationActivity">

    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_remove"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:title="@string/action_help"
        app:showAsAction="never" />

</menu>
